# grp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  build.rs  dependencies.md  rnotes.md
.github/workflows/: Releases.yml  build-linux.yml  build-windows.yml  build.yml  linux.yml  release.yml  windows.yml  winget.yml
bash/: complete.sh
docs/: CNAME  README.md  _coverpage.md  _sidebar.md  index.html  loader.css
docs/guides/: build.md  config.md  quick.md
docs/usage/: basic.md  tips.md
docs/usage/git/: clone.md  fetch.md  pull.md  push.md
docs/usage/orgs/: create.md  delete.md  list.md
docs/usage/repo/: create.md  delete.md  list.md
grp-core/: Cargo.toml  README.md
grp-core/src/: animation.rs  config.rs  json.rs  lib.rs  platform.rs  request.rs
grp-core/src/common/: list.rs  mod.rs  pagination.rs  platform.rs  repo.rs  structs.rs
grp-core/src/common/orgs/: create.rs  delete.rs  list.rs  urls.rs
grp-core/src/common/repos/: create.rs  delete.rs  list.rs  urls.rs
grp-core/src/common/users/: logged.rs  mod.rs  orgs.rs  structs.rs  user_type.rs  users.rs
grp-core/src/error/: content.rs  message.rs  mod.rs  structs.rs  tools.rs  types.rs
grp-core/src/error/errors/: already_exist.rs  macro.rs  mod.rs  not_found.rs  parsing.rs  request.rs
grp-core/src/error/map/: serde.rs
grp-core/src/error/specific/: already_exist.rs  incomplete.rs  local_repo_not_found.rs  mod.rs  not_repo_found.rs  obj404.rs  unauthorized.rs  unsupported.rs  url_parsing.rs
grp-core/src/specific/gitea/: parser.rs  unwrap.rs
grp-core/src/specific/gitea/orgs/: create.rs
grp-core/src/specific/github/: unwrap.rs
grp-core/src/specific/gitlab/: mod.rs  unwrap.rs
grp-core/src/specific/gitlab/groups/: create.rs  delete.rs  get.rs  mod.rs  search.rs
grp-core/src/specific/gitlab/groups/utils/: mod.rs  search.rs  traits.rs
grp-core/src/specific/gitlab/projects/: delete.rs  get.rs
grp-core/src/specific/gitlab/users/: search.rs
grp-core/src/system/: code.rs
src/: main.rs
src/animations/: animation.rs  creation.rs  delition.rs  fetch.rs  mod.rs  process.rs
src/cache/: mod.rs  repos.rs  structure.rs  users.rs
src/cmdcore/: args.rs
src/commands/: grp.rs  mod.rs
src/commands/cache/: structure.rs
src/commands/cmdcore/: args.rs  commands.rs  mod.rs
src/commands/completions/: core.rs  mod.rs  repo.rs  repostructure.rs  structure.rs  usettings.rs
src/commands/config/: command.rs  config.rs  mod.rs
src/commands/core/: args.rs  commands.rs  common.rs  mod.rs
src/commands/local/: clone.rs  fetch.rs  mod.rs  pull.rs  push.rs
src/commands/orgs/: command.rs  manager.rs  mod.rs  orgs.rs
src/commands/repos/: create.rs  delete.rs  list.rs  mod.rs
src/commands/validations/: mod.rs  pconf.rs  repo.rs  structure.rs
src/config/: command.rs  loader.rs  location.rs  mod.rs  save.rs  structure.rs
src/config/subcommands/: add.rs  default.rs  mod.rs  path.rs
src/errors/: error.rs  fs_errors.rs  mod.rs  types.rs
src/girep/: animation.rs  base.rs  config.rs  json.rs  mod.rs  platform.rs  repo.rs  request.rs  supported.rs  type.rs
src/girep/animations/: animation.rs  creation.rs  delition.rs  fetch.rs  process.rs
src/girep/commands/: list.rs  mod.rs
src/girep/common/: list.rs  mod.rs  pagination.rs  platform.rs  repo.rs  show.rs
src/girep/config/: command.rs  config.rs  loader.rs  mod.rs  save.rs  structure.rs
src/girep/error/: content.rs  message.rs  mod.rs  repo.rs  show.rs  structs.rs  types.rs
src/girep/errors/: error.rs  mod.rs  types.rs
src/girep/gitea/: errors.rs  header.rs
src/girep/github/: errors.rs  header.rs  mod.rs
src/girep/gitlab/: errors.rs  header.rs  mod.rs
src/girep/local/: clone.rs  errors.rs  fetch.rs  mod.rs  pull.rs  push.rs  remote.rs
src/girep/macros/: macros.rs  mod.rs
src/girep/repos/: gitea.rs  github.rs  mod.rs  paggination.rs  platform.rs  supported.rs
src/girep/specific/: mod.rs
src/girep/usettings/: mod.rs  read.rs  update.rs  utils.rs  validate.rs  write.rs
src/local/: clone.rs  fetch.rs  merge.rs  mod.rs  pull.rs  push.rs  remote.rs  structs.rs
src/local/git/: action.rs  error.rs  mod.rs  options.rs  structs.rs
src/macros/: mod.rs  validations.rs
src/macros/validations/: mod.rs  pconfs.rs  repo.rs  repo_structure.rs
src/network/: mod.rs  pagination.rs
src/system/: directories.rs  file.rs  mod.rs  show.rs  stdout.rs
src/update/: check.rs  metadata.rs  mod.rs  structs.rs  version.rs
src/update/command/: command.rs  manager.rs  (+1 more)
src/usettings/: mod.rs  read.rs  structs.rs  update.rs  utils.rs  validate.rs  write.rs
wix/: License.rtf  main.wxs
(+187 files in other folders)
