[package]
name = "grp"
version = "0.7.3-beta"
edition = "2024"
license = "MIT"
authors = ["feraxhp <feraxhp+gh@gmail.com>"]
description = "A simple CLI tool to mannage platforms for git repositories"
homepage = "https://github.com/feraxhp/grp"

[dependencies]
hyper = "1.6.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.39" , features = ["cargo"]}
dirs = "6.0.0"
color-print = "0.3.7"
indicatif = "0.17.11"
futures = "0.3.31"
git2 = "0.20.2"
urlencoding = "2.1.3"
regex = "1.11.1"

[build-dependencies]
winres = "0.1"

[package.metadata.generate-rpm]
url="https://github.com/feraxhp/grp"
assets = [
    { source = "target/release/grp", dest = "/usr/bin/grp", mode = "755" },
]

[package.metadata.deb]
depends="$auto"
assets = [
    ["target/release/grp", "usr/bin/", "755"],
]
