[workspace]
members = ["grp-core"]

[package]
name = "girep"
version = "0.11.0-beta"
edition = "2024"
license = "MIT"
authors = ["feraxhp <feraxhp+gh@gmail.com>"]
description = "A simple CLI tool to mannage platforms for git repositories"
homepage = "https://github.com/feraxhp/grp"

[dependencies]
grp-core = { path = "./grp-core", version="0.1.0" }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.60" , features = ["cargo"] }
dirs = "6.0.0"
color-print = "0.3.7"
indicatif = "0.18.3"
futures = "0.3.31"
git2 = "0.20.3"
urlencoding = "2.1.3"
regex = "1.12.2"
clap_complete = { version = "4.5.66", features = ["unstable-dynamic"] } 
cfg-if = "1.0.4"
directories = "6.0.0"

[[bin]]
name = "grp"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.generate-rpm]
name="grp"
url="https://github.com/feraxhp/grp"
assets = [
    { source = "target/release/grp", dest = "/usr/bin/grp", mode = "755" },
]

[package.metadata.deb]
name="grp"
depends="$auto"
assets = [
    ["target/release/grp", "usr/bin/", "755"],
]
