[package]
name = "grp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.6.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
color-print = "0.3.7"
futures = "0.3.31"
urlencoding = "2.1.3"
regex = "1.11.1"
