[package]
name = "grp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.8.1"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
color-print = "0.3.7"
futures = "0.3.31"
urlencoding = "2.1.3"
regex = "1.12.2"
